2008-02-03  Emmanuele Bassi  <ebassi@openedhand.com>

	* Makefile.PL: Require Clutter core >= 0.5.5

	* Clutter.pm: Bump to 0.550

	* xs/ClutterBehaviourScale.xs:
	* xs/ClutterEffect.xs:
	* xs/ClutterEntry.xs: Update after upstream API changes.

	* t/ClutterBehaviourScale.t: Update test.

2008-01-23  Emmanuele Bassi  <ebassi@openedhand.com>

	* Makefile.PL: Require trunk for clutter-gtk

	* clutterperl.h:
	* maps-gtk:
	* xs/ClutterGtk.xs: Update for upstream change.

2008-01-17  Emmanuele Bassi  <ebassi@openedhand.com>

	* Clutter.pm: Clean up some wording, and remove the old FSF address
	from the licesing notes (use the URL instead).

2008-01-17  Emmanuele Bassi  <ebassi@openedhand.com>

	* MANIFEST:
	* examples/gtk-clutter.pl: Add Gtk2::ClutterEmbed usage example.

2008-01-17  Emmanuele Bassi  <ebassi@openedhand.com>

	* Clutter.pm: Bump up to 0.530, as we require trunk

	* Makefile.PL: Require clutter-core 0.5.3

	* examples/custom-actor.pl: Fix SYNOPSIS.

	* t/ClutterBehaviourScale.t: Test the new Clutter::BehaviourScale
	accessors

	* xs/ClutterEffect.xs:
	* xs/ClutterBehaviourScale.xs: Update after the upstream API
	change in ClutterBehaviourScale and clutter_effect_scale()

	* xs/ClutterModel.xs: Use clutter_model_insertv() instead of
	calling clutter_model_insert_value().

2008-01-09  Emmanuele Bassi  <ebassi@openedhand.com>

	* t/ClutterModel.t: Update test suite.

2008-01-09  Emmanuele Bassi  <ebassi@openedhand.com>

	reviewed by: <delete if not using a buddy>

	* Clutter.pm: Bump up to 0.510 as we require the 0.5.1 release

	* README:
	* Makefile.PL: Update Clutter requirements

	* MANIFEST:
	* maps:
	* xs_files: s/ClutterModelDefault/ClutterListModel/

	* xs/ClutterListModel.xs: Update wrapper after rename

2008-01-09  Emmanuele Bassi  <ebassi@openedhand.com>

	* Clutter.pm: Post-release bump to 0.501

2008-01-09  Emmanuele Bassi  <ebassi@openedhand.com>

	* NEWS:
	* README: Release 0.500

2008-01-09  Emmanuele Bassi  <ebassi@openedhand.com>
